--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -11,5 +11,16 @@ body {
 }
 
 .btnOutline {
-  @apply border border-gray-200 py-3 px-5 rounded-full text-lg font-medium hover:outline hover:outline-orange-600 transition-all duration-150;
+  @apply border border-gray-200 py-3 px-5 rounded-full text-lg font-medium  hover:text-gray-600 hover:border-orange-600 hover:border transition-all duration-150;
+}
+
+img {
+  @apply h-[600px] rounded-md w-full object-cover;
+}
+.lead {
+  @apply text-4xl font-bold tracking-wider leading-snug text-orange-600;
+}
+
+.sub-text {
+  @apply text-gray-600 font-medium text-xl tracking-normal leading-8;
 }
