--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 body {
+  scroll-behavior: smooth;
   @apply font-sans bg-gray-50 transition-all duration-150 ease-in;
 }
 
@@ -18,9 +19,20 @@ img {
   @apply h-[600px] rounded-md w-full object-cover;
 }
 .lead {
-  @apply text-4xl font-bold tracking-wider leading-snug text-orange-600;
+  @apply text-5xl font-bold tracking-wider leading-snug text-orange-600;
+}
+.subLead {
+  @apply text-2xl font-bold tracking-wider leading-snug text-orange-600;
 }
 
 .sub-text {
-  @apply text-gray-600 font-medium text-xl tracking-normal leading-8;
+  @apply text-gray-500 font-medium text-lg leading-8 tracking-wide;
+}
+
+.titleText {
+  @apply text-3xl font-medium text-gray-700;
+}
+
+.carousel-img {
+  @apply h-[00px];
 }
