--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -19,7 +19,7 @@ body {
 }
 
 img {
-  @apply h-[600px] rounded-md w-full object-cover;
+  @apply h-[600px] rounded-xl w-full object-cover;
 }
 .lead {
   @apply text-5xl font-bold tracking-wider leading-snug text-orange-600;
