--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -53,7 +53,7 @@ input::placeholder {
 }
 
 textarea {
-  @apply w-full py-3 px-2 text-gray-400 rounded-lg bg-gray-100 border font-bold;
+  @apply w-full py-3 px-2 text-sm text-gray-400 rounded-lg bg-gray-100 border font-bold;
 }
 
 input,
