--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -52,6 +52,10 @@ input::placeholder {
   @apply text-gray-400;
 }
 
+select {
+  @apply w-full p-3 bg-transparent border rounded-lg outline-orange-600 text-gray-500 text-sm shadow-sm  font-bold;
+}
+
 textarea {
   @apply w-full py-3 px-2 text-sm text-gray-400 rounded-lg bg-gray-100 border font-bold;
 }
